--- a/css/styles.css
+++ b/css/styles.css
@@ -7409,7 +7409,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #bd5d38 !important;
+  background-color: #011529 !important;
 }
 
 .bg-secondary {
