--- a/css/styles.css
+++ b/css/styles.css
@@ -7353,7 +7353,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #bd5d38 !important;
+  color: #011529 !important;
 }
 
 .text-secondary {
